added CommandManager with CommandHelper

--- a/MvxCommandTest.Pc/Views/MainView.xaml
+++ b/MvxCommandTest.Pc/Views/MainView.xaml
@@ -9,11 +9,8 @@
                   d:DataContext="{d:DesignInstance viewModels:MainViewModel}">
     <Grid>
         <StackPanel>
-            <CheckBox IsChecked="{Binding AllowExecution, UpdateSourceTrigger=PropertyChanged}">Allow Execution</CheckBox>
-            <Button Content="Do Work" Command="{Binding DoWorkCommand }"
-                    IsEnabled="{Binding AllowExecution, Mode=OneWay}"/>
-            <Button Content="Do Async Work" Command="{Binding DoAsyncWorkCommand }"
-                    IsEnabled="{Binding AllowExecution, Mode=OneWay}"/>
+            <CheckBox IsChecked="{Binding AllowExecution}">Allow Execution</CheckBox>
+            <Button Content="Do Work" Command="{Binding DoWorkCommand }"/>
         </StackPanel>
     </Grid>
 </views:MvxWpfView>
